fix form padding-top on small device

--- a/src/css/components/section/_section.pcss
+++ b/src/css/components/section/_section.pcss
@@ -2,8 +2,6 @@
 	padding-top: $block-gutter-l;
 	padding-bottom: $block-gutter-l;
 	@media (max-width: $below-small) {
-		padding-top: $block-gutter-m;
-		padding-bottom: $block-gutter-m;
 	}
 }
 
